--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,8 +7,19 @@
 .card img{
     width: 100%;
     height:200px;
+    object-fit: cover;
 }
 .inactive img{
     width:100px;
     height:100px;
+}
+.imageSizeMyBlog{
+    width: 100px !important;
+    height: 100px !important;
+    object-fit: fill;
+}
+.re_siz{
+    width: 150px;
+    height: 70px;
+    object-fit: cover;
 }
